// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests for StandardPage component renders StandardPage with help 1`] = `
<WithStyles(ForwardRef(Grid))
  className="StandardPage"
  container={true}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={true}
  >
    <WithStyles(ForwardRef(Typography))
      color="primary"
      component="h2"
      data-testid="page-title"
      id="page-title"
      variant="h4"
    >
      Test
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
  <div>
    <Connect(HelpIcon)
      buttonLabel="Test"
      text="Test"
      title="Test"
    />
  </div>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  />
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    Test
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Snapshot tests for StandardPage component renders StandardPage with title 1`] = `
<WithStyles(ForwardRef(Grid))
  className="StandardPage"
  container={true}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={true}
  >
    <WithStyles(ForwardRef(Typography))
      color="primary"
      component="h2"
      data-testid="page-title"
      id="page-title"
      variant="h4"
    >
      standard page title
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  />
  <WithStyles(ForwardRef(Grid))
    item={true}
  />
</WithStyles(ForwardRef(Grid))>
`;

exports[`Snapshot tests for StandardPage component renders StandardPage without a title 1`] = `
<WithStyles(ForwardRef(Grid))
  className="StandardPage"
  container={true}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={12}
  />
  <WithStyles(ForwardRef(Grid))
    item={true}
  />
</WithStyles(ForwardRef(Grid))>
`;

exports[`Snapshot tests for full mount StandardPage component renders StandardPage with title and  help and content 1`] = `
<Provider
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": Immutable.Map {},
          },
          Object {
            "type": "return",
            "value": Immutable.Map {},
          },
          Object {
            "type": "return",
            "value": Immutable.Map {},
          },
        ],
      },
      "subscribe": [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "testKey",
          "pathname": "/",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "testKey",
              "pathname": "/",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <ThemeProvider
        theme={
          Object {
            "breakpoints": Object {
              "between": [Function],
              "down": [Function],
              "keys": Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ],
              "only": [Function],
              "up": [Function],
              "values": Object {
                "lg": 1280,
                "md": 960,
                "sm": 600,
                "xl": 1920,
                "xs": 0,
              },
              "width": [Function],
            },
            "direction": "ltr",
            "graphs": Object {
              "color1": "#d72865",
              "color2": "#1e7d94",
              "color3": "#49075E",
              "color4": "#468fcc",
              "color5": "#f28620",
              "color6": "#333333",
              "color7": "#595959",
            },
            "hexToRGBA": [Function],
            "mixins": Object {
              "gutters": [Function],
              "toolbar": Object {
                "@media (min-width:0px) and (orientation: landscape)": Object {
                  "minHeight": 48,
                },
                "@media (min-width:600px)": Object {
                  "minHeight": 64,
                },
                "minHeight": 56,
              },
            },
            "overrides": Object {
              "MUIDataTable": Object {
                "paper": Object {
                  "boxShadow": "none",
                  "margin": 0,
                  "padding": 0,
                },
              },
              "MuiFormLabel": Object {
                "root": Object {
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "100%",
                },
              },
              "MuiIconButton": Object {
                "colorInherit": Object {
                  "color": "none",
                },
              },
              "MuiMenuItem": Object {
                "root": Object {
                  "&$selected": Object {
                    "backgroundColor": "#4085C6 !important",
                    "color": "#FFFFFF",
                  },
                },
              },
            },
            "palette": Object {
              "accent": Object {
                "dark": "#2a557d",
                "light": "#54acff",
                "main": "#316799",
              },
              "action": Object {
                "activatedOpacity": 0.12,
                "active": "rgba(0, 0, 0, 0.54)",
                "disabled": "rgba(0, 0, 0, 0.26)",
                "disabledBackground": "rgba(0, 0, 0, 0.12)",
                "disabledOpacity": 0.38,
                "focus": "rgba(0, 0, 0, 0.12)",
                "focusOpacity": 0.12,
                "hover": "rgba(0, 0, 0, 0.04)",
                "hoverOpacity": 0.04,
                "selected": "rgba(0, 0, 0, 0.08)",
                "selectedOpacity": 0.08,
              },
              "augmentColor": [Function],
              "background": Object {
                "default": "#fafafa",
                "paper": "#fff",
              },
              "common": Object {
                "black": "#000",
                "white": "#fff",
              },
              "contrastThreshold": 3,
              "divider": "rgba(0, 0, 0, 0.12)",
              "error": Object {
                "contrastText": "#fff",
                "dark": "#790000",
                "light": "#ff0000",
                "main": "#c80000",
              },
              "getContrastText": [Function],
              "grey": Object {
                "100": "#f5f5f5",
                "200": "#eeeeee",
                "300": "#e0e0e0",
                "400": "#bdbdbd",
                "50": "#fafafa",
                "500": "#9e9e9e",
                "600": "#757575",
                "700": "#616161",
                "800": "#424242",
                "900": "#212121",
                "A100": "#d5d5d5",
                "A200": "#aaaaaa",
                "A400": "#303030",
                "A700": "#616161",
              },
              "info": Object {
                "contrastText": "#fff",
                "dark": "#1976d2",
                "light": "#64b5f6",
                "main": "#2196f3",
              },
              "primary": Object {
                "contrastText": "#fff",
                "dark": "#3b1a59",
                "gradient": Object {
                  "diagonal": Object {
                    "background": "linear-gradient(135deg, rgb(81,36,122) 55%,rgb(150,42,139) 100%)",
                    "filter": "progid:DXImageTransform.Microsoft.gradient( startColorstr=\\"#51247a\\", endColorstr=\\"#962a8b\\",GradientType=1 )",
                  },
                  "horizontal": Object {
                    "background": "linear-gradient(to right, rgb(81,36,122) 55%,rgb(150,42,139) 100%)",
                    "filter": "progid:DXImageTransform.Microsoft.gradient( startColorstr=\\"#51247a\\", endColorstr=\\"#962a8b\\",GradientType=1 )",
                  },
                },
                "light": "#962A8B",
                "main": "#51247A",
              },
              "secondary": Object {
                "contrastText": "#fff",
                "dark": "#333333",
                "light": "#f2f2f2",
                "main": "#595959",
              },
              "success": Object {
                "contrastText": "#fff",
                "dark": "#005000",
                "light": "#00a700",
                "main": "#007200",
              },
              "text": Object {
                "disabled": "rgba(0, 0, 0, 0.38)",
                "hint": "rgba(0, 0, 0, 0.38)",
                "primary": "rgba(0, 0, 0, 0.87)",
                "secondary": "rgba(0, 0, 0, 0.54)",
              },
              "tonalOffset": 0.2,
              "type": "light",
              "warning": Object {
                "contrastText": "#fff",
                "dark": "#542400",
                "light": "#ff9a57",
                "main": "#bf5000",
              },
              "white": Object {
                "main": "#FFFFFF",
              },
            },
            "props": Object {},
            "shadows": Array [
              "none",
              "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
              "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
              "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
              "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
              "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
              "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
              "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
              "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
              "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
              "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
              "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
              "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
              "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
              "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
              "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
              "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
              "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
              "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
              "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
              "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
              "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
              "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
              "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
              "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
            ],
            "shape": Object {
              "borderRadius": 4,
            },
            "spacing": [Function],
            "status": Object {
              "danger": "#f44336",
              "warning": "#ff9800",
            },
            "transitions": Object {
              "create": [Function],
              "duration": Object {
                "complex": 375,
                "enteringScreen": 225,
                "leavingScreen": 195,
                "short": 250,
                "shorter": 200,
                "shortest": 150,
                "standard": 300,
              },
              "easing": Object {
                "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
              },
              "getAutoHeightDuration": [Function],
            },
            "typography": Object {
              "body1": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 300,
                "letterSpacing": "0.00938em",
                "lineHeight": 1.5,
              },
              "body2": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.875rem",
                "fontWeight": 300,
                "letterSpacing": "0.01071em",
                "lineHeight": 1.43,
              },
              "button": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.875rem",
                "fontWeight": 400,
                "letterSpacing": "0.02857em",
                "lineHeight": 1.75,
                "textTransform": "uppercase",
              },
              "caption": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.75rem",
                "fontWeight": 300,
                "letterSpacing": "0.03333em",
                "lineHeight": 1.66,
              },
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": 14,
              "fontWeightBold": 700,
              "fontWeightLight": 200,
              "fontWeightMedium": 400,
              "fontWeightRegular": 300,
              "h1": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "6rem",
                "fontWeight": 200,
                "letterSpacing": "-0.01562em",
                "lineHeight": 1.167,
              },
              "h2": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "3.75rem",
                "fontWeight": 200,
                "letterSpacing": "-0.00833em",
                "lineHeight": 1.2,
              },
              "h3": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "3rem",
                "fontWeight": 300,
                "letterSpacing": "0em",
                "lineHeight": 1.167,
              },
              "h4": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "2.125rem",
                "fontWeight": 300,
                "letterSpacing": "0.00735em",
                "lineHeight": 1.235,
              },
              "h5": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "1.5rem",
                "fontWeight": 300,
                "letterSpacing": "0em",
                "lineHeight": 1.334,
              },
              "h6": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 400,
                "letterSpacing": "0.0075em",
                "lineHeight": 1.6,
              },
              "htmlFontSize": 16,
              "overline": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.75rem",
                "fontWeight": 300,
                "letterSpacing": "0.08333em",
                "lineHeight": 2.66,
                "textTransform": "uppercase",
              },
              "pxToRem": [Function],
              "round": [Function],
              "subtitle1": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 300,
                "letterSpacing": "0.00938em",
                "lineHeight": 1.75,
              },
              "subtitle2": Object {
                "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                "fontSize": "0.875rem",
                "fontWeight": 400,
                "letterSpacing": "0.00714em",
                "lineHeight": 1.57,
              },
              "suppressDeprecationWarnings": true,
              "useNextVariants": true,
            },
            "zIndex": Object {
              "appBar": 1100,
              "drawer": 1200,
              "mobileStepper": 1000,
              "modal": 1300,
              "snackbar": 1400,
              "speedDial": 1050,
              "tooltip": 1500,
            },
            Symbol(mui.nested): false,
          }
        }
      >
        <MuiPickersUtilsProvider
          utils={[Function]}
        >
          <StandardPage
            classes={Object {}}
            help={
              Object {
                "buttonLabel": "Test",
                "text": "Test",
                "title": "Test",
              }
            }
            title="Test"
          >
            <WithStyles(Page)
              classes={Object {}}
              help={
                Object {
                  "buttonLabel": "Test",
                  "text": "Test",
                  "title": "Test",
                }
              }
              title="Test"
            >
              <Page
                classes={
                  Object {
                    "helpIcon": "Page-helpIcon-3",
                    "layoutCard": "Page-layoutCard-1",
                    "layoutTitle": "Page-layoutTitle-2",
                  }
                }
                help={
                  Object {
                    "buttonLabel": "Test",
                    "text": "Test",
                    "title": "Test",
                  }
                }
                theme={
                  Object {
                    "breakpoints": Object {
                      "between": [Function],
                      "down": [Function],
                      "keys": Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ],
                      "only": [Function],
                      "up": [Function],
                      "values": Object {
                        "lg": 1280,
                        "md": 960,
                        "sm": 600,
                        "xl": 1920,
                        "xs": 0,
                      },
                      "width": [Function],
                    },
                    "direction": "ltr",
                    "graphs": Object {
                      "color1": "#d72865",
                      "color2": "#1e7d94",
                      "color3": "#49075E",
                      "color4": "#468fcc",
                      "color5": "#f28620",
                      "color6": "#333333",
                      "color7": "#595959",
                    },
                    "hexToRGBA": [Function],
                    "mixins": Object {
                      "gutters": [Function],
                      "toolbar": Object {
                        "@media (min-width:0px) and (orientation: landscape)": Object {
                          "minHeight": 48,
                        },
                        "@media (min-width:600px)": Object {
                          "minHeight": 64,
                        },
                        "minHeight": 56,
                      },
                    },
                    "overrides": Object {
                      "MUIDataTable": Object {
                        "paper": Object {
                          "boxShadow": "none",
                          "margin": 0,
                          "padding": 0,
                        },
                      },
                      "MuiFormLabel": Object {
                        "root": Object {
                          "overflow": "hidden",
                          "textOverflow": "ellipsis",
                          "whiteSpace": "nowrap",
                          "width": "100%",
                        },
                      },
                      "MuiIconButton": Object {
                        "colorInherit": Object {
                          "color": "none",
                        },
                      },
                      "MuiMenuItem": Object {
                        "root": Object {
                          "&$selected": Object {
                            "backgroundColor": "#4085C6 !important",
                            "color": "#FFFFFF",
                          },
                        },
                      },
                    },
                    "palette": Object {
                      "accent": Object {
                        "dark": "#2a557d",
                        "light": "#54acff",
                        "main": "#316799",
                      },
                      "action": Object {
                        "activatedOpacity": 0.12,
                        "active": "rgba(0, 0, 0, 0.54)",
                        "disabled": "rgba(0, 0, 0, 0.26)",
                        "disabledBackground": "rgba(0, 0, 0, 0.12)",
                        "disabledOpacity": 0.38,
                        "focus": "rgba(0, 0, 0, 0.12)",
                        "focusOpacity": 0.12,
                        "hover": "rgba(0, 0, 0, 0.04)",
                        "hoverOpacity": 0.04,
                        "selected": "rgba(0, 0, 0, 0.08)",
                        "selectedOpacity": 0.08,
                      },
                      "augmentColor": [Function],
                      "background": Object {
                        "default": "#fafafa",
                        "paper": "#fff",
                      },
                      "common": Object {
                        "black": "#000",
                        "white": "#fff",
                      },
                      "contrastThreshold": 3,
                      "divider": "rgba(0, 0, 0, 0.12)",
                      "error": Object {
                        "contrastText": "#fff",
                        "dark": "#790000",
                        "light": "#ff0000",
                        "main": "#c80000",
                      },
                      "getContrastText": [Function],
                      "grey": Object {
                        "100": "#f5f5f5",
                        "200": "#eeeeee",
                        "300": "#e0e0e0",
                        "400": "#bdbdbd",
                        "50": "#fafafa",
                        "500": "#9e9e9e",
                        "600": "#757575",
                        "700": "#616161",
                        "800": "#424242",
                        "900": "#212121",
                        "A100": "#d5d5d5",
                        "A200": "#aaaaaa",
                        "A400": "#303030",
                        "A700": "#616161",
                      },
                      "info": Object {
                        "contrastText": "#fff",
                        "dark": "#1976d2",
                        "light": "#64b5f6",
                        "main": "#2196f3",
                      },
                      "primary": Object {
                        "contrastText": "#fff",
                        "dark": "#3b1a59",
                        "gradient": Object {
                          "diagonal": Object {
                            "background": "linear-gradient(135deg, rgb(81,36,122) 55%,rgb(150,42,139) 100%)",
                            "filter": "progid:DXImageTransform.Microsoft.gradient( startColorstr=\\"#51247a\\", endColorstr=\\"#962a8b\\",GradientType=1 )",
                          },
                          "horizontal": Object {
                            "background": "linear-gradient(to right, rgb(81,36,122) 55%,rgb(150,42,139) 100%)",
                            "filter": "progid:DXImageTransform.Microsoft.gradient( startColorstr=\\"#51247a\\", endColorstr=\\"#962a8b\\",GradientType=1 )",
                          },
                        },
                        "light": "#962A8B",
                        "main": "#51247A",
                      },
                      "secondary": Object {
                        "contrastText": "#fff",
                        "dark": "#333333",
                        "light": "#f2f2f2",
                        "main": "#595959",
                      },
                      "success": Object {
                        "contrastText": "#fff",
                        "dark": "#005000",
                        "light": "#00a700",
                        "main": "#007200",
                      },
                      "text": Object {
                        "disabled": "rgba(0, 0, 0, 0.38)",
                        "hint": "rgba(0, 0, 0, 0.38)",
                        "primary": "rgba(0, 0, 0, 0.87)",
                        "secondary": "rgba(0, 0, 0, 0.54)",
                      },
                      "tonalOffset": 0.2,
                      "type": "light",
                      "warning": Object {
                        "contrastText": "#fff",
                        "dark": "#542400",
                        "light": "#ff9a57",
                        "main": "#bf5000",
                      },
                      "white": Object {
                        "main": "#FFFFFF",
                      },
                    },
                    "props": Object {},
                    "shadows": Array [
                      "none",
                      "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
                      "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
                      "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
                      "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
                      "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
                      "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
                      "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
                      "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
                      "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
                      "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
                      "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
                      "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
                      "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
                      "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
                      "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
                      "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
                      "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
                      "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
                      "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
                      "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
                      "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
                      "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
                      "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
                      "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
                    ],
                    "shape": Object {
                      "borderRadius": 4,
                    },
                    "spacing": [Function],
                    "status": Object {
                      "danger": "#f44336",
                      "warning": "#ff9800",
                    },
                    "transitions": Object {
                      "create": [Function],
                      "duration": Object {
                        "complex": 375,
                        "enteringScreen": 225,
                        "leavingScreen": 195,
                        "short": 250,
                        "shorter": 200,
                        "shortest": 150,
                        "standard": 300,
                      },
                      "easing": Object {
                        "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
                        "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
                        "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
                        "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
                      },
                      "getAutoHeightDuration": [Function],
                    },
                    "typography": Object {
                      "body1": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 300,
                        "letterSpacing": "0.00938em",
                        "lineHeight": 1.5,
                      },
                      "body2": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 300,
                        "letterSpacing": "0.01071em",
                        "lineHeight": 1.43,
                      },
                      "button": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                        "letterSpacing": "0.02857em",
                        "lineHeight": 1.75,
                        "textTransform": "uppercase",
                      },
                      "caption": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 300,
                        "letterSpacing": "0.03333em",
                        "lineHeight": 1.66,
                      },
                      "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                      "fontSize": 14,
                      "fontWeightBold": 700,
                      "fontWeightLight": 200,
                      "fontWeightMedium": 400,
                      "fontWeightRegular": 300,
                      "h1": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "6rem",
                        "fontWeight": 200,
                        "letterSpacing": "-0.01562em",
                        "lineHeight": 1.167,
                      },
                      "h2": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "3.75rem",
                        "fontWeight": 200,
                        "letterSpacing": "-0.00833em",
                        "lineHeight": 1.2,
                      },
                      "h3": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "3rem",
                        "fontWeight": 300,
                        "letterSpacing": "0em",
                        "lineHeight": 1.167,
                      },
                      "h4": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "2.125rem",
                        "fontWeight": 300,
                        "letterSpacing": "0.00735em",
                        "lineHeight": 1.235,
                      },
                      "h5": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "1.5rem",
                        "fontWeight": 300,
                        "letterSpacing": "0em",
                        "lineHeight": 1.334,
                      },
                      "h6": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "1.25rem",
                        "fontWeight": 400,
                        "letterSpacing": "0.0075em",
                        "lineHeight": 1.6,
                      },
                      "htmlFontSize": 16,
                      "overline": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 300,
                        "letterSpacing": "0.08333em",
                        "lineHeight": 2.66,
                        "textTransform": "uppercase",
                      },
                      "pxToRem": [Function],
                      "round": [Function],
                      "subtitle1": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 300,
                        "letterSpacing": "0.00938em",
                        "lineHeight": 1.75,
                      },
                      "subtitle2": Object {
                        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
                        "fontSize": "0.875rem",
                        "fontWeight": 400,
                        "letterSpacing": "0.00714em",
                        "lineHeight": 1.57,
                      },
                      "suppressDeprecationWarnings": true,
                      "useNextVariants": true,
                    },
                    "zIndex": Object {
                      "appBar": 1100,
                      "drawer": 1200,
                      "mobileStepper": 1000,
                      "modal": 1300,
                      "snackbar": 1400,
                      "speedDial": 1050,
                      "tooltip": 1500,
                    },
                    Symbol(mui.nested): false,
                  }
                }
                title="Test"
              >
                <WithStyles(ForwardRef(Grid))
                  className="StandardPage"
                  container={true}
                >
                  <ForwardRef(Grid)
                    className="StandardPage"
                    classes={
                      Object {
                        "align-content-xs-center": "MuiGrid-align-content-xs-center",
                        "align-content-xs-flex-end": "MuiGrid-align-content-xs-flex-end",
                        "align-content-xs-flex-start": "MuiGrid-align-content-xs-flex-start",
                        "align-content-xs-space-around": "MuiGrid-align-content-xs-space-around",
                        "align-content-xs-space-between": "MuiGrid-align-content-xs-space-between",
                        "align-items-xs-baseline": "MuiGrid-align-items-xs-baseline",
                        "align-items-xs-center": "MuiGrid-align-items-xs-center",
                        "align-items-xs-flex-end": "MuiGrid-align-items-xs-flex-end",
                        "align-items-xs-flex-start": "MuiGrid-align-items-xs-flex-start",
                        "container": "MuiGrid-container",
                        "direction-xs-column": "MuiGrid-direction-xs-column",
                        "direction-xs-column-reverse": "MuiGrid-direction-xs-column-reverse",
                        "direction-xs-row-reverse": "MuiGrid-direction-xs-row-reverse",
                        "grid-lg-1": "MuiGrid-grid-lg-1",
                        "grid-lg-10": "MuiGrid-grid-lg-10",
                        "grid-lg-11": "MuiGrid-grid-lg-11",
                        "grid-lg-12": "MuiGrid-grid-lg-12",
                        "grid-lg-2": "MuiGrid-grid-lg-2",
                        "grid-lg-3": "MuiGrid-grid-lg-3",
                        "grid-lg-4": "MuiGrid-grid-lg-4",
                        "grid-lg-5": "MuiGrid-grid-lg-5",
                        "grid-lg-6": "MuiGrid-grid-lg-6",
                        "grid-lg-7": "MuiGrid-grid-lg-7",
                        "grid-lg-8": "MuiGrid-grid-lg-8",
                        "grid-lg-9": "MuiGrid-grid-lg-9",
                        "grid-lg-auto": "MuiGrid-grid-lg-auto",
                        "grid-lg-true": "MuiGrid-grid-lg-true",
                        "grid-md-1": "MuiGrid-grid-md-1",
                        "grid-md-10": "MuiGrid-grid-md-10",
                        "grid-md-11": "MuiGrid-grid-md-11",
                        "grid-md-12": "MuiGrid-grid-md-12",
                        "grid-md-2": "MuiGrid-grid-md-2",
                        "grid-md-3": "MuiGrid-grid-md-3",
                        "grid-md-4": "MuiGrid-grid-md-4",
                        "grid-md-5": "MuiGrid-grid-md-5",
                        "grid-md-6": "MuiGrid-grid-md-6",
                        "grid-md-7": "MuiGrid-grid-md-7",
                        "grid-md-8": "MuiGrid-grid-md-8",
                        "grid-md-9": "MuiGrid-grid-md-9",
                        "grid-md-auto": "MuiGrid-grid-md-auto",
                        "grid-md-true": "MuiGrid-grid-md-true",
                        "grid-sm-1": "MuiGrid-grid-sm-1",
                        "grid-sm-10": "MuiGrid-grid-sm-10",
                        "grid-sm-11": "MuiGrid-grid-sm-11",
                        "grid-sm-12": "MuiGrid-grid-sm-12",
                        "grid-sm-2": "MuiGrid-grid-sm-2",
                        "grid-sm-3": "MuiGrid-grid-sm-3",
                        "grid-sm-4": "MuiGrid-grid-sm-4",
                        "grid-sm-5": "MuiGrid-grid-sm-5",
                        "grid-sm-6": "MuiGrid-grid-sm-6",
                        "grid-sm-7": "MuiGrid-grid-sm-7",
                        "grid-sm-8": "MuiGrid-grid-sm-8",
                        "grid-sm-9": "MuiGrid-grid-sm-9",
                        "grid-sm-auto": "MuiGrid-grid-sm-auto",
                        "grid-sm-true": "MuiGrid-grid-sm-true",
                        "grid-xl-1": "MuiGrid-grid-xl-1",
                        "grid-xl-10": "MuiGrid-grid-xl-10",
                        "grid-xl-11": "MuiGrid-grid-xl-11",
                        "grid-xl-12": "MuiGrid-grid-xl-12",
                        "grid-xl-2": "MuiGrid-grid-xl-2",
                        "grid-xl-3": "MuiGrid-grid-xl-3",
                        "grid-xl-4": "MuiGrid-grid-xl-4",
                        "grid-xl-5": "MuiGrid-grid-xl-5",
                        "grid-xl-6": "MuiGrid-grid-xl-6",
                        "grid-xl-7": "MuiGrid-grid-xl-7",
                        "grid-xl-8": "MuiGrid-grid-xl-8",
                        "grid-xl-9": "MuiGrid-grid-xl-9",
                        "grid-xl-auto": "MuiGrid-grid-xl-auto",
                        "grid-xl-true": "MuiGrid-grid-xl-true",
                        "grid-xs-1": "MuiGrid-grid-xs-1",
                        "grid-xs-10": "MuiGrid-grid-xs-10",
                        "grid-xs-11": "MuiGrid-grid-xs-11",
                        "grid-xs-12": "MuiGrid-grid-xs-12",
                        "grid-xs-2": "MuiGrid-grid-xs-2",
                        "grid-xs-3": "MuiGrid-grid-xs-3",
                        "grid-xs-4": "MuiGrid-grid-xs-4",
                        "grid-xs-5": "MuiGrid-grid-xs-5",
                        "grid-xs-6": "MuiGrid-grid-xs-6",
                        "grid-xs-7": "MuiGrid-grid-xs-7",
                        "grid-xs-8": "MuiGrid-grid-xs-8",
                        "grid-xs-9": "MuiGrid-grid-xs-9",
                        "grid-xs-auto": "MuiGrid-grid-xs-auto",
                        "grid-xs-true": "MuiGrid-grid-xs-true",
                        "item": "MuiGrid-item",
                        "justify-xs-center": "MuiGrid-justify-xs-center",
                        "justify-xs-flex-end": "MuiGrid-justify-xs-flex-end",
                        "justify-xs-space-around": "MuiGrid-justify-xs-space-around",
                        "justify-xs-space-between": "MuiGrid-justify-xs-space-between",
                        "justify-xs-space-evenly": "MuiGrid-justify-xs-space-evenly",
                        "root": "MuiGrid-root",
                        "spacing-xs-1": "MuiGrid-spacing-xs-1",
                        "spacing-xs-10": "MuiGrid-spacing-xs-10",
                        "spacing-xs-2": "MuiGrid-spacing-xs-2",
                        "spacing-xs-3": "MuiGrid-spacing-xs-3",
                        "spacing-xs-4": "MuiGrid-spacing-xs-4",
                        "spacing-xs-5": "MuiGrid-spacing-xs-5",
                        "spacing-xs-6": "MuiGrid-spacing-xs-6",
                        "spacing-xs-7": "MuiGrid-spacing-xs-7",
                        "spacing-xs-8": "MuiGrid-spacing-xs-8",
                        "spacing-xs-9": "MuiGrid-spacing-xs-9",
                        "wrap-xs-nowrap": "MuiGrid-wrap-xs-nowrap",
                        "wrap-xs-wrap-reverse": "MuiGrid-wrap-xs-wrap-reverse",
                        "zeroMinWidth": "MuiGrid-zeroMinWidth",
                      }
                    }
                    container={true}
                  >
                    <div
                      className="MuiGrid-root StandardPage MuiGrid-container"
                    >
                      <WithStyles(ForwardRef(Grid))
                        item={true}
                        xs={true}
                      >
                        <ForwardRef(Grid)
                          classes={
                            Object {
                              "align-content-xs-center": "MuiGrid-align-content-xs-center",
                              "align-content-xs-flex-end": "MuiGrid-align-content-xs-flex-end",
                              "align-content-xs-flex-start": "MuiGrid-align-content-xs-flex-start",
                              "align-content-xs-space-around": "MuiGrid-align-content-xs-space-around",
                              "align-content-xs-space-between": "MuiGrid-align-content-xs-space-between",
                              "align-items-xs-baseline": "MuiGrid-align-items-xs-baseline",
                              "align-items-xs-center": "MuiGrid-align-items-xs-center",
                              "align-items-xs-flex-end": "MuiGrid-align-items-xs-flex-end",
                              "align-items-xs-flex-start": "MuiGrid-align-items-xs-flex-start",
                              "container": "MuiGrid-container",
                              "direction-xs-column": "MuiGrid-direction-xs-column",
                              "direction-xs-column-reverse": "MuiGrid-direction-xs-column-reverse",
                              "direction-xs-row-reverse": "MuiGrid-direction-xs-row-reverse",
                              "grid-lg-1": "MuiGrid-grid-lg-1",
                              "grid-lg-10": "MuiGrid-grid-lg-10",
                              "grid-lg-11": "MuiGrid-grid-lg-11",
                              "grid-lg-12": "MuiGrid-grid-lg-12",
                              "grid-lg-2": "MuiGrid-grid-lg-2",
                              "grid-lg-3": "MuiGrid-grid-lg-3",
                              "grid-lg-4": "MuiGrid-grid-lg-4",
                              "grid-lg-5": "MuiGrid-grid-lg-5",
                              "grid-lg-6": "MuiGrid-grid-lg-6",
                              "grid-lg-7": "MuiGrid-grid-lg-7",
                              "grid-lg-8": "MuiGrid-grid-lg-8",
                              "grid-lg-9": "MuiGrid-grid-lg-9",
                              "grid-lg-auto": "MuiGrid-grid-lg-auto",
                              "grid-lg-true": "MuiGrid-grid-lg-true",
                              "grid-md-1": "MuiGrid-grid-md-1",
                              "grid-md-10": "MuiGrid-grid-md-10",
                              "grid-md-11": "MuiGrid-grid-md-11",
                              "grid-md-12": "MuiGrid-grid-md-12",
                              "grid-md-2": "MuiGrid-grid-md-2",
                              "grid-md-3": "MuiGrid-grid-md-3",
                              "grid-md-4": "MuiGrid-grid-md-4",
                              "grid-md-5": "MuiGrid-grid-md-5",
                              "grid-md-6": "MuiGrid-grid-md-6",
                              "grid-md-7": "MuiGrid-grid-md-7",
                              "grid-md-8": "MuiGrid-grid-md-8",
                              "grid-md-9": "MuiGrid-grid-md-9",
                              "grid-md-auto": "MuiGrid-grid-md-auto",
                              "grid-md-true": "MuiGrid-grid-md-true",
                              "grid-sm-1": "MuiGrid-grid-sm-1",
                              "grid-sm-10": "MuiGrid-grid-sm-10",
                              "grid-sm-11": "MuiGrid-grid-sm-11",
                              "grid-sm-12": "MuiGrid-grid-sm-12",
                              "grid-sm-2": "MuiGrid-grid-sm-2",
                              "grid-sm-3": "MuiGrid-grid-sm-3",
                              "grid-sm-4": "MuiGrid-grid-sm-4",
                              "grid-sm-5": "MuiGrid-grid-sm-5",
                              "grid-sm-6": "MuiGrid-grid-sm-6",
                              "grid-sm-7": "MuiGrid-grid-sm-7",
                              "grid-sm-8": "MuiGrid-grid-sm-8",
                              "grid-sm-9": "MuiGrid-grid-sm-9",
                              "grid-sm-auto": "MuiGrid-grid-sm-auto",
                              "grid-sm-true": "MuiGrid-grid-sm-true",
                              "grid-xl-1": "MuiGrid-grid-xl-1",
                              "grid-xl-10": "MuiGrid-grid-xl-10",
                              "grid-xl-11": "MuiGrid-grid-xl-11",
                              "grid-xl-12": "MuiGrid-grid-xl-12",
                              "grid-xl-2": "MuiGrid-grid-xl-2",
                              "grid-xl-3": "MuiGrid-grid-xl-3",
                              "grid-xl-4": "MuiGrid-grid-xl-4",
                              "grid-xl-5": "MuiGrid-grid-xl-5",
                              "grid-xl-6": "MuiGrid-grid-xl-6",
                              "grid-xl-7": "MuiGrid-grid-xl-7",
                              "grid-xl-8": "MuiGrid-grid-xl-8",
                              "grid-xl-9": "MuiGrid-grid-xl-9",
                              "grid-xl-auto": "MuiGrid-grid-xl-auto",
                              "grid-xl-true": "MuiGrid-grid-xl-true",
                              "grid-xs-1": "MuiGrid-grid-xs-1",
                              "grid-xs-10": "MuiGrid-grid-xs-10",
                              "grid-xs-11": "MuiGrid-grid-xs-11",
                              "grid-xs-12": "MuiGrid-grid-xs-12",
                              "grid-xs-2": "MuiGrid-grid-xs-2",
                              "grid-xs-3": "MuiGrid-grid-xs-3",
                              "grid-xs-4": "MuiGrid-grid-xs-4",
                              "grid-xs-5": "MuiGrid-grid-xs-5",
                              "grid-xs-6": "MuiGrid-grid-xs-6",
                              "grid-xs-7": "MuiGrid-grid-xs-7",
                              "grid-xs-8": "MuiGrid-grid-xs-8",
                              "grid-xs-9": "MuiGrid-grid-xs-9",
                              "grid-xs-auto": "MuiGrid-grid-xs-auto",
                              "grid-xs-true": "MuiGrid-grid-xs-true",
                              "item": "MuiGrid-item",
                              "justify-xs-center": "MuiGrid-justify-xs-center",
                              "justify-xs-flex-end": "MuiGrid-justify-xs-flex-end",
                              "justify-xs-space-around": "MuiGrid-justify-xs-space-around",
                              "justify-xs-space-between": "MuiGrid-justify-xs-space-between",
                              "justify-xs-space-evenly": "MuiGrid-justify-xs-space-evenly",
                              "root": "MuiGrid-root",
                              "spacing-xs-1": "MuiGrid-spacing-xs-1",
                              "spacing-xs-10": "MuiGrid-spacing-xs-10",
                              "spacing-xs-2": "MuiGrid-spacing-xs-2",
                              "spacing-xs-3": "MuiGrid-spacing-xs-3",
                              "spacing-xs-4": "MuiGrid-spacing-xs-4",
                              "spacing-xs-5": "MuiGrid-spacing-xs-5",
                              "spacing-xs-6": "MuiGrid-spacing-xs-6",
                              "spacing-xs-7": "MuiGrid-spacing-xs-7",
                              "spacing-xs-8": "MuiGrid-spacing-xs-8",
                              "spacing-xs-9": "MuiGrid-spacing-xs-9",
                              "wrap-xs-nowrap": "MuiGrid-wrap-xs-nowrap",
                              "wrap-xs-wrap-reverse": "MuiGrid-wrap-xs-wrap-reverse",
                              "zeroMinWidth": "MuiGrid-zeroMinWidth",
                            }
                          }
                          item={true}
                          xs={true}
                        >
                          <div
                            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                          >
                            <WithStyles(ForwardRef(Typography))
                              className="Page-layoutTitle-2"
                              color="primary"
                              component="h2"
                              data-testid="page-title"
                              id="page-title"
                              variant="h4"
                            >
                              <ForwardRef(Typography)
                                className="Page-layoutTitle-2"
                                classes={
                                  Object {
                                    "alignCenter": "MuiTypography-alignCenter",
                                    "alignJustify": "MuiTypography-alignJustify",
                                    "alignLeft": "MuiTypography-alignLeft",
                                    "alignRight": "MuiTypography-alignRight",
                                    "body1": "MuiTypography-body1",
                                    "body2": "MuiTypography-body2",
                                    "button": "MuiTypography-button",
                                    "caption": "MuiTypography-caption",
                                    "colorError": "MuiTypography-colorError",
                                    "colorInherit": "MuiTypography-colorInherit",
                                    "colorPrimary": "MuiTypography-colorPrimary",
                                    "colorSecondary": "MuiTypography-colorSecondary",
                                    "colorTextPrimary": "MuiTypography-colorTextPrimary",
                                    "colorTextSecondary": "MuiTypography-colorTextSecondary",
                                    "displayBlock": "MuiTypography-displayBlock",
                                    "displayInline": "MuiTypography-displayInline",
                                    "gutterBottom": "MuiTypography-gutterBottom",
                                    "h1": "MuiTypography-h1",
                                    "h2": "MuiTypography-h2",
                                    "h3": "MuiTypography-h3",
                                    "h4": "MuiTypography-h4",
                                    "h5": "MuiTypography-h5",
                                    "h6": "MuiTypography-h6",
                                    "noWrap": "MuiTypography-noWrap",
                                    "overline": "MuiTypography-overline",
                                    "paragraph": "MuiTypography-paragraph",
                                    "root": "MuiTypography-root",
                                    "srOnly": "MuiTypography-srOnly",
                                    "subtitle1": "MuiTypography-subtitle1",
                                    "subtitle2": "MuiTypography-subtitle2",
                                  }
                                }
                                color="primary"
                                component="h2"
                                data-testid="page-title"
                                id="page-title"
                                variant="h4"
                              >
                                <h2
                                  className="MuiTypography-root Page-layoutTitle-2 MuiTypography-h4 MuiTypography-colorPrimary"
                                  data-testid="page-title"
                                  id="page-title"
                                >
                                  Test
                                </h2>
                              </ForwardRef(Typography)>
                            </WithStyles(ForwardRef(Typography))>
                          </div>
                        </ForwardRef(Grid)>
                      </WithStyles(ForwardRef(Grid))>
                      <div
                        className="Page-helpIcon-3"
                      >
                        <Connect(HelpIcon)
                          buttonLabel="Test"
                          text="Test"
                          title="Test"
                        >
                          <HelpIcon
                            IconComponent={
                              Object {
                                "$$typeof": Symbol(react.memo),
                                "compare": null,
                                "muiName": "SvgIcon",
                                "type": Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "render": [Function],
                                },
                              }
                            }
                            buttonLabel="Test"
                            onClick={[Function]}
                            text="Test"
                            title="Test"
                            tooltip="Click for more information"
                          >
                            <WithStyles(ForwardRef(Tooltip))
                              TransitionComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "propTypes": Object {
                                    "children": [Function],
                                    "in": [Function],
                                    "onEnter": [Function],
                                    "onExit": [Function],
                                    "style": [Function],
                                    "timeout": [Function],
                                  },
                                  "render": [Function],
                                }
                              }
                              placement="bottom-end"
                              title="Click for more information"
                            >
                              <ForwardRef(Tooltip)
                                TransitionComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "propTypes": Object {
                                      "children": [Function],
                                      "in": [Function],
                                      "onEnter": [Function],
                                      "onExit": [Function],
                                      "style": [Function],
                                      "timeout": [Function],
                                    },
                                    "render": [Function],
                                  }
                                }
                                classes={
                                  Object {
                                    "arrow": "MuiTooltip-arrow",
                                    "popper": "MuiTooltip-popper",
                                    "popperArrow": "MuiTooltip-popperArrow",
                                    "popperInteractive": "MuiTooltip-popperInteractive",
                                    "tooltip": "MuiTooltip-tooltip",
                                    "tooltipArrow": "MuiTooltip-tooltipArrow",
                                    "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom",
                                    "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft",
                                    "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight",
                                    "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop",
                                    "touch": "MuiTooltip-touch",
                                  }
                                }
                                placement="bottom-end"
                                title="Click for more information"
                              >
                                <WithStyles(ForwardRef(IconButton))
                                  aria-describedby={null}
                                  aria-label="Click for more information"
                                  className=""
                                  id="help-icon"
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onMouseLeave={[Function]}
                                  onMouseOver={[Function]}
                                  onTouchEnd={[Function]}
                                  onTouchStart={[Function]}
                                  title="Click for more information"
                                >
                                  <ForwardRef(IconButton)
                                    aria-describedby={null}
                                    aria-label="Click for more information"
                                    className=""
                                    classes={
                                      Object {
                                        "colorInherit": "MuiIconButton-colorInherit",
                                        "colorPrimary": "MuiIconButton-colorPrimary",
                                        "colorSecondary": "MuiIconButton-colorSecondary",
                                        "disabled": "Mui-disabled",
                                        "edgeEnd": "MuiIconButton-edgeEnd",
                                        "edgeStart": "MuiIconButton-edgeStart",
                                        "label": "MuiIconButton-label",
                                        "root": "MuiIconButton-root",
                                        "sizeSmall": "MuiIconButton-sizeSmall",
                                      }
                                    }
                                    id="help-icon"
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    onMouseLeave={[Function]}
                                    onMouseOver={[Function]}
                                    onTouchEnd={[Function]}
                                    onTouchStart={[Function]}
                                    title="Click for more information"
                                  >
                                    <WithStyles(ForwardRef(ButtonBase))
                                      aria-describedby={null}
                                      aria-label="Click for more information"
                                      centerRipple={true}
                                      className="MuiIconButton-root"
                                      disabled={false}
                                      focusRipple={true}
                                      id="help-icon"
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      onMouseLeave={[Function]}
                                      onMouseOver={[Function]}
                                      onTouchEnd={[Function]}
                                      onTouchStart={[Function]}
                                      title="Click for more information"
                                    >
                                      <ForwardRef(ButtonBase)
                                        aria-describedby={null}
                                        aria-label="Click for more information"
                                        centerRipple={true}
                                        className="MuiIconButton-root"
                                        classes={
                                          Object {
                                            "disabled": "Mui-disabled",
                                            "focusVisible": "Mui-focusVisible",
                                            "root": "MuiButtonBase-root",
                                          }
                                        }
                                        disabled={false}
                                        focusRipple={true}
                                        id="help-icon"
                                        onBlur={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        onMouseLeave={[Function]}
                                        onMouseOver={[Function]}
                                        onTouchEnd={[Function]}
                                        onTouchStart={[Function]}
                                        title="Click for more information"
                                      >
                                        <button
                                          aria-describedby={null}
                                          aria-label="Click for more information"
                                          className="MuiButtonBase-root MuiIconButton-root"
                                          disabled={false}
                                          id="help-icon"
                                          onBlur={[Function]}
                                          onClick={[Function]}
                                          onDragLeave={[Function]}
                                          onFocus={[Function]}
                                          onKeyDown={[Function]}
                                          onKeyUp={[Function]}
                                          onMouseDown={[Function]}
                                          onMouseLeave={[Function]}
                                          onMouseOver={[Function]}
                                          onMouseUp={[Function]}
                                          onTouchEnd={[Function]}
                                          onTouchMove={[Function]}
                                          onTouchStart={[Function]}
                                          tabIndex={0}
                                          title="Click for more information"
                                          type="button"
                                        >
                                          <span
                                            className="MuiIconButton-label"
                                          >
                                            <HelpOutlineIcon
                                              className="makeStyles-helpIcon-137"
                                              titleAccess="Click for more information"
                                            >
                                              <WithStyles(ForwardRef(SvgIcon))
                                                className="makeStyles-helpIcon-137"
                                                titleAccess="Click for more information"
                                              >
                                                <ForwardRef(SvgIcon)
                                                  className="makeStyles-helpIcon-137"
                                                  classes={
                                                    Object {
                                                      "colorAction": "MuiSvgIcon-colorAction",
                                                      "colorDisabled": "MuiSvgIcon-colorDisabled",
                                                      "colorError": "MuiSvgIcon-colorError",
                                                      "colorPrimary": "MuiSvgIcon-colorPrimary",
                                                      "colorSecondary": "MuiSvgIcon-colorSecondary",
                                                      "fontSizeInherit": "MuiSvgIcon-fontSizeInherit",
                                                      "fontSizeLarge": "MuiSvgIcon-fontSizeLarge",
                                                      "fontSizeSmall": "MuiSvgIcon-fontSizeSmall",
                                                      "root": "MuiSvgIcon-root",
                                                    }
                                                  }
                                                  titleAccess="Click for more information"
                                                >
                                                  <svg
                                                    className="MuiSvgIcon-root makeStyles-helpIcon-137"
                                                    focusable="false"
                                                    role="img"
                                                    viewBox="0 0 24 24"
                                                  >
                                                    <path
                                                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                                                    />
                                                    <title>
                                                      Click for more information
                                                    </title>
                                                  </svg>
                                                </ForwardRef(SvgIcon)>
                                              </WithStyles(ForwardRef(SvgIcon))>
                                            </HelpOutlineIcon>
                                          </span>
                                          <WithStyles(memo)
                                            center={true}
                                          >
                                            <ForwardRef(TouchRipple)
                                              center={true}
                                              classes={
                                                Object {
                                                  "child": "MuiTouchRipple-child",
                                                  "childLeaving": "MuiTouchRipple-childLeaving",
                                                  "childPulsate": "MuiTouchRipple-childPulsate",
                                                  "ripple": "MuiTouchRipple-ripple",
                                                  "ripplePulsate": "MuiTouchRipple-ripplePulsate",
                                                  "rippleVisible": "MuiTouchRipple-rippleVisible",
                                                  "root": "MuiTouchRipple-root",
                                                }
                                              }
                                            >
                                              <span
                                                className="MuiTouchRipple-root"
                                              >
                                                <TransitionGroup
                                                  childFactory={[Function]}
                                                  component={null}
                                                  exit={true}
                                                />
                                              </span>
                                            </ForwardRef(TouchRipple)>
                                          </WithStyles(memo)>
                                        </button>
                                      </ForwardRef(ButtonBase)>
                                    </WithStyles(ForwardRef(ButtonBase))>
                                  </ForwardRef(IconButton)>
                                </WithStyles(ForwardRef(IconButton))>
                                <ForwardRef(Popper)
                                  anchorEl={
                                    <button
                                      aria-label="Click for more information"
                                      class="MuiButtonBase-root MuiIconButton-root"
                                      id="help-icon"
                                      tabindex="0"
                                      title="Click for more information"
                                      type="button"
                                    >
                                      <span
                                        class="MuiIconButton-label"
                                      >
                                        <svg
                                          class="MuiSvgIcon-root makeStyles-helpIcon-137"
                                          focusable="false"
                                          role="img"
                                          viewBox="0 0 24 24"
                                        >
                                          <path
                                            d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                                          />
                                          <title>
                                            Click for more information
                                          </title>
                                        </svg>
                                      </span>
                                      <span
                                        class="MuiTouchRipple-root"
                                      />
                                    </button>
                                  }
                                  className="MuiTooltip-popper"
                                  id={null}
                                  open={false}
                                  placement="bottom-end"
                                  popperOptions={
                                    Object {
                                      "modifiers": Object {
                                        "arrow": Object {
                                          "element": null,
                                          "enabled": false,
                                        },
                                      },
                                    }
                                  }
                                  transition={true}
                                />
                              </ForwardRef(Tooltip)>
                            </WithStyles(ForwardRef(Tooltip))>
                          </HelpIcon>
                        </Connect(HelpIcon)>
                      </div>
                      <WithStyles(ForwardRef(Grid))
                        item={true}
                        xs={12}
                      >
                        <ForwardRef(Grid)
                          classes={
                            Object {
                              "align-content-xs-center": "MuiGrid-align-content-xs-center",
                              "align-content-xs-flex-end": "MuiGrid-align-content-xs-flex-end",
                              "align-content-xs-flex-start": "MuiGrid-align-content-xs-flex-start",
                              "align-content-xs-space-around": "MuiGrid-align-content-xs-space-around",
                              "align-content-xs-space-between": "MuiGrid-align-content-xs-space-between",
                              "align-items-xs-baseline": "MuiGrid-align-items-xs-baseline",
                              "align-items-xs-center": "MuiGrid-align-items-xs-center",
                              "align-items-xs-flex-end": "MuiGrid-align-items-xs-flex-end",
                              "align-items-xs-flex-start": "MuiGrid-align-items-xs-flex-start",
                              "container": "MuiGrid-container",
                              "direction-xs-column": "MuiGrid-direction-xs-column",
                              "direction-xs-column-reverse": "MuiGrid-direction-xs-column-reverse",
                              "direction-xs-row-reverse": "MuiGrid-direction-xs-row-reverse",
                              "grid-lg-1": "MuiGrid-grid-lg-1",
                              "grid-lg-10": "MuiGrid-grid-lg-10",
                              "grid-lg-11": "MuiGrid-grid-lg-11",
                              "grid-lg-12": "MuiGrid-grid-lg-12",
                              "grid-lg-2": "MuiGrid-grid-lg-2",
                              "grid-lg-3": "MuiGrid-grid-lg-3",
                              "grid-lg-4": "MuiGrid-grid-lg-4",
                              "grid-lg-5": "MuiGrid-grid-lg-5",
                              "grid-lg-6": "MuiGrid-grid-lg-6",
                              "grid-lg-7": "MuiGrid-grid-lg-7",
                              "grid-lg-8": "MuiGrid-grid-lg-8",
                              "grid-lg-9": "MuiGrid-grid-lg-9",
                              "grid-lg-auto": "MuiGrid-grid-lg-auto",
                              "grid-lg-true": "MuiGrid-grid-lg-true",
                              "grid-md-1": "MuiGrid-grid-md-1",
                              "grid-md-10": "MuiGrid-grid-md-10",
                              "grid-md-11": "MuiGrid-grid-md-11",
                              "grid-md-12": "MuiGrid-grid-md-12",
                              "grid-md-2": "MuiGrid-grid-md-2",
                              "grid-md-3": "MuiGrid-grid-md-3",
                              "grid-md-4": "MuiGrid-grid-md-4",
                              "grid-md-5": "MuiGrid-grid-md-5",
                              "grid-md-6": "MuiGrid-grid-md-6",
                              "grid-md-7": "MuiGrid-grid-md-7",
                              "grid-md-8": "MuiGrid-grid-md-8",
                              "grid-md-9": "MuiGrid-grid-md-9",
                              "grid-md-auto": "MuiGrid-grid-md-auto",
                              "grid-md-true": "MuiGrid-grid-md-true",
                              "grid-sm-1": "MuiGrid-grid-sm-1",
                              "grid-sm-10": "MuiGrid-grid-sm-10",
                              "grid-sm-11": "MuiGrid-grid-sm-11",
                              "grid-sm-12": "MuiGrid-grid-sm-12",
                              "grid-sm-2": "MuiGrid-grid-sm-2",
                              "grid-sm-3": "MuiGrid-grid-sm-3",
                              "grid-sm-4": "MuiGrid-grid-sm-4",
                              "grid-sm-5": "MuiGrid-grid-sm-5",
                              "grid-sm-6": "MuiGrid-grid-sm-6",
                              "grid-sm-7": "MuiGrid-grid-sm-7",
                              "grid-sm-8": "MuiGrid-grid-sm-8",
                              "grid-sm-9": "MuiGrid-grid-sm-9",
                              "grid-sm-auto": "MuiGrid-grid-sm-auto",
                              "grid-sm-true": "MuiGrid-grid-sm-true",
                              "grid-xl-1": "MuiGrid-grid-xl-1",
                              "grid-xl-10": "MuiGrid-grid-xl-10",
                              "grid-xl-11": "MuiGrid-grid-xl-11",
                              "grid-xl-12": "MuiGrid-grid-xl-12",
                              "grid-xl-2": "MuiGrid-grid-xl-2",
                              "grid-xl-3": "MuiGrid-grid-xl-3",
                              "grid-xl-4": "MuiGrid-grid-xl-4",
                              "grid-xl-5": "MuiGrid-grid-xl-5",
                              "grid-xl-6": "MuiGrid-grid-xl-6",
                              "grid-xl-7": "MuiGrid-grid-xl-7",
                              "grid-xl-8": "MuiGrid-grid-xl-8",
                              "grid-xl-9": "MuiGrid-grid-xl-9",
                              "grid-xl-auto": "MuiGrid-grid-xl-auto",
                              "grid-xl-true": "MuiGrid-grid-xl-true",
                              "grid-xs-1": "MuiGrid-grid-xs-1",
                              "grid-xs-10": "MuiGrid-grid-xs-10",
                              "grid-xs-11": "MuiGrid-grid-xs-11",
                              "grid-xs-12": "MuiGrid-grid-xs-12",
                              "grid-xs-2": "MuiGrid-grid-xs-2",
                              "grid-xs-3": "MuiGrid-grid-xs-3",
                              "grid-xs-4": "MuiGrid-grid-xs-4",
                              "grid-xs-5": "MuiGrid-grid-xs-5",
                              "grid-xs-6": "MuiGrid-grid-xs-6",
                              "grid-xs-7": "MuiGrid-grid-xs-7",
                              "grid-xs-8": "MuiGrid-grid-xs-8",
                              "grid-xs-9": "MuiGrid-grid-xs-9",
                              "grid-xs-auto": "MuiGrid-grid-xs-auto",
                              "grid-xs-true": "MuiGrid-grid-xs-true",
                              "item": "MuiGrid-item",
                              "justify-xs-center": "MuiGrid-justify-xs-center",
                              "justify-xs-flex-end": "MuiGrid-justify-xs-flex-end",
                              "justify-xs-space-around": "MuiGrid-justify-xs-space-around",
                              "justify-xs-space-between": "MuiGrid-justify-xs-space-between",
                              "justify-xs-space-evenly": "MuiGrid-justify-xs-space-evenly",
                              "root": "MuiGrid-root",
                              "spacing-xs-1": "MuiGrid-spacing-xs-1",
                              "spacing-xs-10": "MuiGrid-spacing-xs-10",
                              "spacing-xs-2": "MuiGrid-spacing-xs-2",
                              "spacing-xs-3": "MuiGrid-spacing-xs-3",
                              "spacing-xs-4": "MuiGrid-spacing-xs-4",
                              "spacing-xs-5": "MuiGrid-spacing-xs-5",
                              "spacing-xs-6": "MuiGrid-spacing-xs-6",
                              "spacing-xs-7": "MuiGrid-spacing-xs-7",
                              "spacing-xs-8": "MuiGrid-spacing-xs-8",
                              "spacing-xs-9": "MuiGrid-spacing-xs-9",
                              "wrap-xs-nowrap": "MuiGrid-wrap-xs-nowrap",
                              "wrap-xs-wrap-reverse": "MuiGrid-wrap-xs-wrap-reverse",
                              "zeroMinWidth": "MuiGrid-zeroMinWidth",
                            }
                          }
                          item={true}
                          xs={12}
                        >
                          <div
                            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                          />
                        </ForwardRef(Grid)>
                      </WithStyles(ForwardRef(Grid))>
                      <WithStyles(ForwardRef(Grid))
                        className="Page-layoutCard-1"
                        item={true}
                      >
                        <ForwardRef(Grid)
                          className="Page-layoutCard-1"
                          classes={
                            Object {
                              "align-content-xs-center": "MuiGrid-align-content-xs-center",
                              "align-content-xs-flex-end": "MuiGrid-align-content-xs-flex-end",
                              "align-content-xs-flex-start": "MuiGrid-align-content-xs-flex-start",
                              "align-content-xs-space-around": "MuiGrid-align-content-xs-space-around",
                              "align-content-xs-space-between": "MuiGrid-align-content-xs-space-between",
                              "align-items-xs-baseline": "MuiGrid-align-items-xs-baseline",
                              "align-items-xs-center": "MuiGrid-align-items-xs-center",
                              "align-items-xs-flex-end": "MuiGrid-align-items-xs-flex-end",
                              "align-items-xs-flex-start": "MuiGrid-align-items-xs-flex-start",
                              "container": "MuiGrid-container",
                              "direction-xs-column": "MuiGrid-direction-xs-column",
                              "direction-xs-column-reverse": "MuiGrid-direction-xs-column-reverse",
                              "direction-xs-row-reverse": "MuiGrid-direction-xs-row-reverse",
                              "grid-lg-1": "MuiGrid-grid-lg-1",
                              "grid-lg-10": "MuiGrid-grid-lg-10",
                              "grid-lg-11": "MuiGrid-grid-lg-11",
                              "grid-lg-12": "MuiGrid-grid-lg-12",
                              "grid-lg-2": "MuiGrid-grid-lg-2",
                              "grid-lg-3": "MuiGrid-grid-lg-3",
                              "grid-lg-4": "MuiGrid-grid-lg-4",
                              "grid-lg-5": "MuiGrid-grid-lg-5",
                              "grid-lg-6": "MuiGrid-grid-lg-6",
                              "grid-lg-7": "MuiGrid-grid-lg-7",
                              "grid-lg-8": "MuiGrid-grid-lg-8",
                              "grid-lg-9": "MuiGrid-grid-lg-9",
                              "grid-lg-auto": "MuiGrid-grid-lg-auto",
                              "grid-lg-true": "MuiGrid-grid-lg-true",
                              "grid-md-1": "MuiGrid-grid-md-1",
                              "grid-md-10": "MuiGrid-grid-md-10",
                              "grid-md-11": "MuiGrid-grid-md-11",
                              "grid-md-12": "MuiGrid-grid-md-12",
                              "grid-md-2": "MuiGrid-grid-md-2",
                              "grid-md-3": "MuiGrid-grid-md-3",
                              "grid-md-4": "MuiGrid-grid-md-4",
                              "grid-md-5": "MuiGrid-grid-md-5",
                              "grid-md-6": "MuiGrid-grid-md-6",
                              "grid-md-7": "MuiGrid-grid-md-7",
                              "grid-md-8": "MuiGrid-grid-md-8",
                              "grid-md-9": "MuiGrid-grid-md-9",
                              "grid-md-auto": "MuiGrid-grid-md-auto",
                              "grid-md-true": "MuiGrid-grid-md-true",
                              "grid-sm-1": "MuiGrid-grid-sm-1",
                              "grid-sm-10": "MuiGrid-grid-sm-10",
                              "grid-sm-11": "MuiGrid-grid-sm-11",
                              "grid-sm-12": "MuiGrid-grid-sm-12",
                              "grid-sm-2": "MuiGrid-grid-sm-2",
                              "grid-sm-3": "MuiGrid-grid-sm-3",
                              "grid-sm-4": "MuiGrid-grid-sm-4",
                              "grid-sm-5": "MuiGrid-grid-sm-5",
                              "grid-sm-6": "MuiGrid-grid-sm-6",
                              "grid-sm-7": "MuiGrid-grid-sm-7",
                              "grid-sm-8": "MuiGrid-grid-sm-8",
                              "grid-sm-9": "MuiGrid-grid-sm-9",
                              "grid-sm-auto": "MuiGrid-grid-sm-auto",
                              "grid-sm-true": "MuiGrid-grid-sm-true",
                              "grid-xl-1": "MuiGrid-grid-xl-1",
                              "grid-xl-10": "MuiGrid-grid-xl-10",
                              "grid-xl-11": "MuiGrid-grid-xl-11",
                              "grid-xl-12": "MuiGrid-grid-xl-12",
                              "grid-xl-2": "MuiGrid-grid-xl-2",
                              "grid-xl-3": "MuiGrid-grid-xl-3",
                              "grid-xl-4": "MuiGrid-grid-xl-4",
                              "grid-xl-5": "MuiGrid-grid-xl-5",
                              "grid-xl-6": "MuiGrid-grid-xl-6",
                              "grid-xl-7": "MuiGrid-grid-xl-7",
                              "grid-xl-8": "MuiGrid-grid-xl-8",
                              "grid-xl-9": "MuiGrid-grid-xl-9",
                              "grid-xl-auto": "MuiGrid-grid-xl-auto",
                              "grid-xl-true": "MuiGrid-grid-xl-true",
                              "grid-xs-1": "MuiGrid-grid-xs-1",
                              "grid-xs-10": "MuiGrid-grid-xs-10",
                              "grid-xs-11": "MuiGrid-grid-xs-11",
                              "grid-xs-12": "MuiGrid-grid-xs-12",
                              "grid-xs-2": "MuiGrid-grid-xs-2",
                              "grid-xs-3": "MuiGrid-grid-xs-3",
                              "grid-xs-4": "MuiGrid-grid-xs-4",
                              "grid-xs-5": "MuiGrid-grid-xs-5",
                              "grid-xs-6": "MuiGrid-grid-xs-6",
                              "grid-xs-7": "MuiGrid-grid-xs-7",
                              "grid-xs-8": "MuiGrid-grid-xs-8",
                              "grid-xs-9": "MuiGrid-grid-xs-9",
                              "grid-xs-auto": "MuiGrid-grid-xs-auto",
                              "grid-xs-true": "MuiGrid-grid-xs-true",
                              "item": "MuiGrid-item",
                              "justify-xs-center": "MuiGrid-justify-xs-center",
                              "justify-xs-flex-end": "MuiGrid-justify-xs-flex-end",
                              "justify-xs-space-around": "MuiGrid-justify-xs-space-around",
                              "justify-xs-space-between": "MuiGrid-justify-xs-space-between",
                              "justify-xs-space-evenly": "MuiGrid-justify-xs-space-evenly",
                              "root": "MuiGrid-root",
                              "spacing-xs-1": "MuiGrid-spacing-xs-1",
                              "spacing-xs-10": "MuiGrid-spacing-xs-10",
                              "spacing-xs-2": "MuiGrid-spacing-xs-2",
                              "spacing-xs-3": "MuiGrid-spacing-xs-3",
                              "spacing-xs-4": "MuiGrid-spacing-xs-4",
                              "spacing-xs-5": "MuiGrid-spacing-xs-5",
                              "spacing-xs-6": "MuiGrid-spacing-xs-6",
                              "spacing-xs-7": "MuiGrid-spacing-xs-7",
                              "spacing-xs-8": "MuiGrid-spacing-xs-8",
                              "spacing-xs-9": "MuiGrid-spacing-xs-9",
                              "wrap-xs-nowrap": "MuiGrid-wrap-xs-nowrap",
                              "wrap-xs-wrap-reverse": "MuiGrid-wrap-xs-wrap-reverse",
                              "zeroMinWidth": "MuiGrid-zeroMinWidth",
                            }
                          }
                          item={true}
                        >
                          <div
                            className="MuiGrid-root Page-layoutCard-1 MuiGrid-item"
                          >
                            Test
                          </div>
                        </ForwardRef(Grid)>
                      </WithStyles(ForwardRef(Grid))>
                    </div>
                  </ForwardRef(Grid)>
                </WithStyles(ForwardRef(Grid))>
              </Page>
            </WithStyles(Page)>
          </StandardPage>
        </MuiPickersUtilsProvider>
      </ThemeProvider>
    </Router>
  </MemoryRouter>
</Provider>
`;
